--- a/Ch01.ipynb
+++ b/Ch01.ipynb
@@ -2,34 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# 损失函数\n",
-    "def loss(b,w,points):\n",
+    "def loss(b,w,xData,yData):\n",
     "    '''\n",
     "    损失函数\n",
     "    :param b: 偏置\n",
     "    :param w: 权重\n",
-    "    :param points: 数据点\n",
-    "    :return: 损失\n",
+    "    :param xData:\n",
+    "    :param yData:\n",
+    "    :return:\n",
     "    '''\n",
     "    # 损失值\n",
     "    total_loss = 0\n",
-    "    for i in range(0,len(points)):\n",
-    "        x = points[i,0]\n",
-    "        y = points[i,1]\n",
+    "    for i in range(0,len(xData)):\n",
+    "        x = xData[i]\n",
+    "        y = yData[i]\n",
     "        total_loss = total_loss + (y - (w * x + b)) ** 2\n",
     "\n",
-    "    return total_loss/(float(len(points)))"
+    "    return total_loss/(float(len(xData)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# 一步，梯度\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -85,6 +86,71 @@
     "    for i in range(iterations):\n",
     "        b,w = step_gradient(b_cur=b,w_cur=w,points=np.array(points),lr=lr)\n",
     "    return b,w"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10.          -9.7979798   -9.5959596   -9.39393939  -9.19191919\n",
+      "  -8.98989899  -8.78787879  -8.58585859  -8.38383838  -8.18181818\n",
+      "  -7.97979798  -7.77777778  -7.57575758  -7.37373737  -7.17171717\n",
+      "  -6.96969697  -6.76767677  -6.56565657  -6.36363636  -6.16161616\n",
+      "  -5.95959596  -5.75757576  -5.55555556  -5.35353535  -5.15151515\n",
+      "  -4.94949495  -4.74747475  -4.54545455  -4.34343434  -4.14141414\n",
+      "  -3.93939394  -3.73737374  -3.53535354  -3.33333333  -3.13131313\n",
+      "  -2.92929293  -2.72727273  -2.52525253  -2.32323232  -2.12121212\n",
+      "  -1.91919192  -1.71717172  -1.51515152  -1.31313131  -1.11111111\n",
+      "  -0.90909091  -0.70707071  -0.50505051  -0.3030303   -0.1010101\n",
+      "   0.1010101    0.3030303    0.50505051   0.70707071   0.90909091\n",
+      "   1.11111111   1.31313131   1.51515152   1.71717172   1.91919192\n",
+      "   2.12121212   2.32323232   2.52525253   2.72727273   2.92929293\n",
+      "   3.13131313   3.33333333   3.53535354   3.73737374   3.93939394\n",
+      "   4.14141414   4.34343434   4.54545455   4.74747475   4.94949495\n",
+      "   5.15151515   5.35353535   5.55555556   5.75757576   5.95959596\n",
+      "   6.16161616   6.36363636   6.56565657   6.76767677   6.96969697\n",
+      "   7.17171717   7.37373737   7.57575758   7.77777778   7.97979798\n",
+      "   8.18181818   8.38383838   8.58585859   8.78787879   8.98989899\n",
+      "   9.19191919   9.39393939   9.5959596    9.7979798   10.        ]\n",
+      "[-19.14100959 -18.68165521 -18.52068882 -17.57119993 -17.51173369\n",
+      " -16.80096779 -16.86840269 -16.12656438 -16.02846102 -15.66351981\n",
+      " -15.02577284 -14.36398568 -14.37512682 -13.88192729 -13.52584273\n",
+      " -12.72705379 -12.56454118 -12.27192731 -11.7487025  -11.62886172\n",
+      " -11.19009389 -10.21466244  -9.9257086   -9.71475856  -9.79538121\n",
+      "  -9.28896028  -8.6735502   -8.13500332  -7.64794205  -7.29649991\n",
+      "  -7.03684347  -6.7699504   -5.81097167  -5.53129595  -5.48113199\n",
+      "  -4.89777324  -4.37097248  -4.16918021  -3.50344261  -3.1066313\n",
+      "  -3.05112462  -2.48688019  -1.67234256  -1.66545772  -1.16447662\n",
+      "  -1.21675375  -0.41835001   0.3198329    0.44235427   0.85824877\n",
+      "   1.21736739   1.67197093   2.02671435   2.42972009   2.15005564\n",
+      "   3.19646858   3.72858958   4.03740693   4.71117707   4.80245982\n",
+      "   5.36041344   5.54062577   6.13628254   6.4593361    6.99367639\n",
+      "   7.14732607   7.58845595   7.91738657   8.57691047   8.70241039\n",
+      "   9.12084778   9.45844937   9.96577585  10.52290676  10.91929991\n",
+      "  11.11844673  11.71062837  12.1553278   12.3444539   12.37390628\n",
+      "  13.15612865  13.53153096  14.30383508  14.29211203  14.90499187\n",
+      "  15.28272778  15.83339388  16.0447591   16.66612458  16.82850399\n",
+      "  17.51766142  17.48540394  17.94766663  18.48807833  18.9246622\n",
+      "  19.3852527   19.87433604  19.84432274  20.89164483  21.08132762]\n"
+     ]
+    }
+   ],
+   "source": [
+    "xData = np.linspace(-10,10,100)\n",
+    "yData = 2.0 * x + 1.0 + np.random.randn(*x.shape) * 0.2\n",
+    "\n",
+    "print(xData)\n",
+    "print(yData)"
    ],
    "metadata": {
     "collapsed": false,
